feat: add finish modal

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
   --font-main: "calibri", sans-serif;
   --font-title: "helvetica", sans-serif;
   --font-rounded: "circe-rounded", sans-serif;
-  --font-rounded-hude: "circe-rounded-alt", sans-serif;
+  --font-rounded-huge: "circe-rounded-alt", sans-serif;
 
   padding: 0px;
   margin: 0px;
